maze.lessons.maze.island.IslandMaze.scala.error
Escaper:18: error: ';' expected but 'else' found.
        else {droite()}
        ^